<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_list"
        android:icon="@drawable/ic_list_white"
        android:title="@string/nav_bar_list"/>
    <item
        android:id="@+id/action_map"
        android:icon="@drawable/ic_map_white_24dp"
        android:title="@string/nav_bar_map"/>
    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/ic_account_circle_white_24dp"
        android:title="@string/nav_bar_profile"/>
</menu>