...
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ListView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:drawSelectorOnTop="true"
        android:orientation="vertical"
        android:paddingBottom="?attr/actionBarSize"
...
